feat: coming soon modal、loading mask

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Amway TW Cheers</title>
   <!-- Lottie Player include -->
-  <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs" type="module"></script>
+  <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
   <!-- Swiper include -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
@@ -95,22 +95,22 @@
                 </div>
                 <div class="main__illus-anims">
                   <div class="main__illus-anim">
-                    <dotlottie-player src="https://lottie.host/83abe5cc-6c9a-4ccf-b9a3-5065560585d9/aR37ObBTlb.json" class="main__lottie-player" background="transparent" speed="1" direction="1" mode="normal" loop autoplay></dotlottie-player>
+                    <lottie-player src="assets/animations/ae-yoga-girl.json" class="main__lottie-player" background="transparent" speed="1" direction="1" mode="normal" loop autoplay></lottie-player>
                   </div>
                   <div class="main__illus-anim">
-                    <dotlottie-player src="https://lottie.host/f0683492-77ed-49c2-9c04-8483db6dc040/lrQAio2ua9.json" class="main__lottie-player" background="transparent" speed="1" direction="1" mode="normal" loop autoplay></dotlottie-player>
+                    <lottie-player src="assets/animations/ae-tree-and-house.json" class="main__lottie-player" background="transparent" speed="1" direction="1" mode="normal" loop autoplay></lottie-player>
                   </div>
                   <div class="main__illus-anim">
-                    <dotlottie-player src="https://lottie.host/e95d2352-e45a-40a2-8d6e-f264b258d4ef/Fg8nIXd5e8.json" class="main__lottie-player" background="transparent" speed="1" direction="1" mode="normal" loop autoplay></dotlottie-player>
+                    <lottie-player src="assets/animations/ae-engineer-boy.json" class="main__lottie-player" background="transparent" speed="1" direction="1" mode="normal" loop autoplay></lottie-player>
                   </div>
                   <div class="main__illus-anim">
-                    <dotlottie-player src="https://lottie.host/61cc7c96-2fc2-4d67-bf2d-2d82614c9cea/MDkRj88pR2.json" class="main__lottie-player" background="transparent" speed="1" direction="1" mode="normal" loop autoplay></dotlottie-player>
+                    <lottie-player src="assets/animations/ae-youtuber-girl.json" class="main__lottie-player" background="transparent" speed="1" direction="1" mode="normal" loop autoplay></lottie-player>
                   </div>
                   <div class="main__illus-anim">
-                    <dotlottie-player src="https://lottie.host/416122fb-7e34-4ded-9589-da7377c1dc59/RcptxVGD1N.json" class="main__lottie-player" background="transparent" speed="1" direction="1" mode="normal" loop autoplay></dotlottie-player>
+                    <lottie-player src="assets/animations/ae-salesman.json" class="main__lottie-player" background="transparent" speed="1" direction="1" mode="normal" loop autoplay></lottie-player>
                   </div>
                   <div class="main__illus-anim">
-                    <dotlottie-player src="https://lottie.host/93aed7aa-6823-404f-b845-5d505aa19c13/vDtDxOFr4m.json" class="main__lottie-player" background="transparent" speed="1" direction="1" mode="normal" loop autoplay></dotlottie-player>
+                    <lottie-player src="assets/animations/ae-barista.json" class="main__lottie-player" background="transparent" speed="1" direction="1" mode="normal" loop autoplay></lottie-player>
                   </div>
                 </div>
               </div>
@@ -127,7 +127,7 @@
               <div class="cogitation__content">
                 <div class="cogitation__scope">
                   <div class="cogitation__scope-illus-anim">
-                    <dotlottie-player src="https://lottie.host/e95d2352-e45a-40a2-8d6e-f264b258d4ef/Fg8nIXd5e8.json" class="cogitation__lottie-player" background="transparent" speed="1" direction="1" mode="normal" loop autoplay></dotlottie-player>
+                    <lottie-player src="assets/animations/ae-engineer-boy.json" class="cogitation__lottie-player" background="transparent" speed="1" direction="1" mode="normal" loop autoplay></lottie-player>
                   </div>
                   <div class="cogitation__scope-content">
                     <p>
@@ -142,7 +142,7 @@
                 </div>
                 <div class="cogitation__scope">
                   <div class="cogitation__scope-illus-anim">
-                    <dotlottie-player src="https://lottie.host/93aed7aa-6823-404f-b845-5d505aa19c13/vDtDxOFr4m.json" class="cogitation__lottie-player" background="transparent" speed="1" direction="1" mode="normal" loop autoplay></dotlottie-player>
+                    <lottie-player src="assets/animations/ae-barista.json" class="cogitation__lottie-player" background="transparent" speed="1" direction="1" mode="normal" loop autoplay></lottie-player>
                   </div>
                   <div class="cogitation__scope-content">
                     <p>
@@ -213,13 +213,13 @@
                   不是刪去選擇，而是加乘人生
                 </p>
                 <div class="join__illus-anim">
-                  <dotlottie-player src="https://lottie.host/416122fb-7e34-4ded-9589-da7377c1dc59/RcptxVGD1N.json" class="join__lottie-player" background="transparent" speed="1" direction="1" mode="normal" loop autoplay></dotlottie-player>
-                  <dotlottie-player src="https://lottie.host/fb9ac8d5-b418-4521-ad60-895b71422cc2/a1VqAK7w2D.json" class="join__lottie-player" background="transparent" speed="1" direction="1" mode="normal" loop autoplay></dotlottie-player>
+                  <lottie-player src="assets/animations/ae-salesman.json" class="join__lottie-player" background="transparent" speed="1" direction="1" mode="normal" loop autoplay></lottie-player>
+                  <lottie-player src="assets/animations/ae-potted-plant.json" class="join__lottie-player" background="transparent" speed="1" direction="1" mode="normal" loop autoplay></lottie-player>
                 </div>
               </div>
               <div class="join__media-list">
-                <div class="join__media-item">
-                  <div class="join__media-item-cover" onclick="openMediaModal('https://www.youtube.com/embed/jXpTyXPr-50?si=phl_vkHWI9H871YI')">
+                <div class="join__media-item" data-media-source-url="https://www.youtube.com/embed/Isg3jLC30kI?si=L3VSPij4lsqh9_AN">
+                  <div class="join__media-item-cover" onclick="openMediaModal(event, 'join')">
                     <div class="join__media-play-icon">
                       <img src="assets/images/icon-player-off.svg" alt="icon-player-off">
                       <img src="assets/images/icon-player-on.svg" alt="icon-player-on">
@@ -231,8 +231,8 @@
                   </div>
                   <p class="join__media-item-desc">關懷永續，節能環保，帶來更好、更健康的生活</p>
                 </div>
-                <div class="join__media-item">
-                  <div class="join__media-item-cover" onclick="openMediaModal('https://www.youtube.com/embed/lpAD_Y9A53g?si=8Z12915Fk5BNTi6y')">
+                <div class="join__media-item" data-media-source-url="https://www.youtube.com/embed/8bhSmkMvtnQ?si=m0LZV6RIxSoPuEy3">
+                  <div class="join__media-item-cover" onclick="openMediaModal(event, 'join')">
                     <div class="join__media-play-icon">
                       <img src="assets/images/icon-player-off.svg" alt="icon-player-off">
                       <img src="assets/images/icon-player-on.svg" alt="icon-player-on">
@@ -244,8 +244,8 @@
                   </div>
                   <p class="join__media-item-desc">全職投入或是 1 + 1 副業，自由彈性創造更多收入</p>
                 </div>
-                <div class="join__media-item">
-                  <div class="join__media-item-cover">
+                <div class="join__media-item" data-media-source-url="https://www.youtube.com/embed/gO9ErtFLf5w?si=ZMilKpsA7cD6Fjpx">
+                  <div class="join__media-item-cover" onclick="openMediaModal(event, 'join')">
                     <div class="join__media-play-icon">
                       <img src="assets/images/icon-player-off.svg" alt="icon-player-off">
                       <img src="assets/images/icon-player-on.svg" alt="icon-player-on">
@@ -312,15 +312,17 @@
                       只要擁有獨到眼光，隨時都能自帶光芒閃閃發亮
                     </p>
                   </div>
-                  <div class="podcast__media">
-                    <div class="podcast__media-play-icon">
-                      <img src="assets/images/icon-player-off.svg" alt="icon-player-off">
-                      <img src="assets/images/icon-player-on.svg" alt="icon-player-on">
+                  <div class="podcast__media-item" data-media-source-url="">
+                    <div class="podcast__media-item-cover" onclick="openMediaModal(event, 'podcast')">
+                      <div class="podcast__media-play-icon">
+                        <img src="assets/images/icon-player-off.svg" alt="icon-player-off">
+                        <img src="assets/images/icon-player-on.svg" alt="icon-player-on">
+                      </div>
+                      <img src="assets/images/main-page-podcast-section-media-cover.svg" alt="讓舞台上的聚光燈打向你，因為你夠耀眼">
                     </div>
-                    <img src="assets/images/main-page-podcast-section-media-cover.svg" alt="讓舞台上的聚光燈打向你，因為你夠耀眼">
                   </div>
                   <div class="podcast__illus-anim">
-                    <dotlottie-player src="https://lottie.host/83abe5cc-6c9a-4ccf-b9a3-5065560585d9/aR37ObBTlb.json" class="podcast__lottie-player" background="transparent" speed="1" direction="1" mode="normal" loop autoplay></dotlottie-player>
+                    <lottie-player src="assets/animations/ae-yoga-girl.json" class="podcast__lottie-player" background="transparent" speed="1" direction="1" mode="normal" loop autoplay></lottie-player>
                   </div>
                 </div>
               </div>
@@ -366,7 +368,7 @@
                       <img src="assets/images/main-page-cherish-section-subsection-1-title.svg" alt="破除迷思">
                     </div>
                     <div class="cherish__illus-anim">
-                      <dotlottie-player src="https://lottie.host/61cc7c96-2fc2-4d67-bf2d-2d82614c9cea/MDkRj88pR2.json" class="cherish__lottie-player" background="transparent" speed="1" direction="1" mode="normal" loop autoplay></dotlottie-player>
+                      <lottie-player src="assets/animations/ae-youtuber-girl.json" class="cherish__lottie-player" background="transparent" speed="1" direction="1" mode="normal" loop autoplay></lottie-player>
                     </div>
                   </div>
                   <div class="cherish__scope">
@@ -463,7 +465,7 @@
                       <img src="assets/images/main-page-cherish-section-subsection-2-title.svg" alt="興趣創業">
                     </div>
                     <div class="cherish__illus-anim">
-                      <dotlottie-player src="https://lottie.host/32f5f24a-b2ff-4c3e-98fb-986cd1b46e6f/47xC3PKzau.json" class="cherish__lottie-player" background="transparent" speed="1" direction="1" mode="normal" loop autoplay></dotlottie-player>
+                      <lottie-player src="assets/animations/ae-phone.json" class="cherish__lottie-player" background="transparent" speed="1" direction="1" mode="normal" loop autoplay></lottie-player>
                     </div>
                   </div>
                   <div class="cherish__scope">
@@ -507,7 +509,7 @@
                       <img src="assets/images/main-page-cherish-section-subsection-3-title.svg" alt="中年轉職">
                     </div>
                     <div class="cherish__illus-anim">
-                      <dotlottie-player src="https://lottie.host/442e3d2c-dfed-43bf-b5b5-3964f4b73f93/QMcchfji5a.json" class="cherish__lottie-player" background="transparent" speed="1" direction="1" mode="normal" loop autoplay></dotlottie-player>
+                      <lottie-player src="assets/animations/ae-pocket-watch.json" class="cherish__lottie-player" background="transparent" speed="1" direction="1" mode="normal" loop autoplay></lottie-player>
                     </div>
                   </div>
                   <div class="cherish__scope">
@@ -604,7 +606,7 @@
                       <img src="assets/images/main-page-cherish-section-subsection-4-title.svg" alt="多角技能">
                     </div>
                     <div class="cherish__illus-anim">
-                      <dotlottie-player src="https://lottie.host/2b706c70-30c3-48c3-b423-6893b1ef62f0/HmVl5i3Yrm.json" class="cherish__lottie-player" background="transparent" speed="1" direction="1" mode="normal" loop autoplay></dotlottie-player>
+                      <lottie-player src="assets/animations/ae-watch-wrench.json" class="cherish__lottie-player" background="transparent" speed="1" direction="1" mode="normal" loop autoplay></lottie-player>
                     </div>
                   </div>
                   <div class="cherish__scope">
@@ -642,6 +644,24 @@
             </div>
           </div>
         </section>
+        <!-- Coming Soon Modal -->
+        <div class="coming-soon-modal">
+          <div class="coming-soon-modal__container">
+            <div class="coming-soon-modal__head">
+              <div class="coming-soon-modal__close-btn" onclick="closeComingSoonModal()">
+                <button type="button"></button>
+                <span>關閉</span>
+              </div>
+            </div>
+            <div class="coming-soon-modal__body">
+              <div class="coming-soon-modal__title">
+                <img src="assets/images/main-page-coming-soon-modal-title.svg" alt="影片即將上線，敬請期待">
+              </div>
+              <p class="coming-soon-modal__desc">影片內容描述影片內容描述影片內容描述影片內容描述影片內容描述影片內容描述影片內容描述影片內容描述影片內容描述影片內容描述影片內容描述影片內容描述影片內容描述影片內容描述影片內容描述影片內容描述</p>
+            </div>
+          </div>
+          <div class="coming-soon-modal__backdrop" onclick="closeComingSoonModal()"></div>          
+        </div>
         <!-- Media Modal -->
         <div class="media-modal">
           <div class="media-modal__container">
@@ -679,6 +699,12 @@
         </div>
       </div>      
     </footer>
+  </div>
+  <!-- Loading Mask -->
+  <div class="loading-mask">
+    <div class="loading-mask__container">
+      <img src="assets/images/main-page-main-section-title.svg" alt="Amway, my way 最 IN 的大人選擇">
+    </div>
   </div>
 </body>
 </html>
