--- a/index.html
+++ b/index.html
@@ -701,7 +701,7 @@
     </footer>
   </div>
   <!-- Loading Mask -->
-  <div class="loading-mask">
+  <div class="loading-mask loading-mask--active">
     <div class="loading-mask__container">
       <img src="assets/images/main-page-main-section-title.svg" alt="Amway, my way 最 IN 的大人選擇">
     </div>
