--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Amway TW Cheers</title>
+  <meta property="og:title" content="Amway, my way 最 IN 的大人選擇"></meta>
+  <title>Amway, my way 最 IN 的大人選擇</title>
+  <link type="image/x-icon" rel="shortcut icon" href="https://www.cheers.com.tw/favicon_2019.ico">
   <!-- Lottie Player include -->
   <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
   <!-- Swiper include -->
@@ -15,8 +17,7 @@
   <script type="text/javascript" src="core/js/main.js"></script>
 </head>
 <body>
-  <!-- Loading Mask -->
-  <div class="loading-mask loading-mask--active">
+  <div class="loading-mask">
     <div class="loading-mask__container">
       <img src="assets/images/main-page-main-section-title.svg" alt="Amway, my way 最 IN 的大人選擇">
     </div>
@@ -27,14 +28,14 @@
         <button type="button" class="header__mobile-menu-open-btn" onclick="toggleMobileMenu(true)"></button>
         <div class="header__logo">
           <a href="https://www.cwlearning.com.tw/" target="_blank">
-            <img src="assets/images/logo-cw.svg" class="header__logo-cw" alt="Amway cw">
+            <img src="assets/images/logo-cw.png" class="header__logo-cw" alt="Amway cw">
           </a>
           <a href="https://www.cheers.com.tw/" target="_blank">
-            <img src="assets/images/logo-cheers.svg" class="header__logo-cheers" alt="Amway cheers">
+            <img src="assets/images/logo-cheers.png" class="header__logo-cheers" alt="Amway cheers">
           </a>
           <hr>
           <a href="https://web.amway.com.tw/" target="_blank">
-            <img src="assets/images/logo-amway.svg" class="header__logo-amway" alt="Amway">
+            <img src="assets/images/logo-amway.png" class="header__logo-amway" alt="Amway">
           </a>
         </div>
         <nav class="header__pc-nav">
@@ -148,7 +149,7 @@
                 </div>
                 <div class="cogitation__scope">
                   <div class="cogitation__scope-illus-anim">
-                    <lottie-player src="assets/animations/ae-barista.json" class="cogitation__lottie-player" background="transparent" speed="1" direction="1" mode="normal" loop autoplay></lottie-player>
+                    <lottie-player src="assets/animations/ae-barista-mirror.json" class="cogitation__lottie-player" background="transparent" speed="1" direction="1" mode="normal" loop autoplay></lottie-player>
                   </div>
                   <div class="cogitation__scope-content">
                     <p>
