--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <script type="text/javascript" src="core/js/main.js"></script>
 </head>
 <body>
-  <div class="loading-mask">
+  <div class="loading-mask loading-mask--active">
     <div class="loading-mask__container">
       <img src="assets/images/main-page-main-section-title.svg" alt="Amway, my way 最 IN 的大人選擇">
     </div>
