--- a/index.html
+++ b/index.html
@@ -89,16 +89,32 @@
               </div>
               <div class="main__content">
                 <div class="main__desc">
-                  <p>
-                    疫情催生打破工作地域與時間界線<br>
-                    WFH、Workation 新興詞彙出現<br>
-                    甚至興趣創業、興趣變現，工作不再只有一種模式
-                  </p>
-                  <p>
-                    小孩做選擇，大人可以做更好的選擇<br>
-                    安麗知道，工作、生活、興趣，缺一不可<br>
-                    三者都要，可能很硬，但也是這個世代最 IN 的選擇
-                  </p>
+                  <div class="main__desc--pc">
+                    <p>
+                      疫情催生打破工作地域與時間界線<br>
+                      WFH、Workation 新興詞彙出現<br>
+                      甚至興趣創業、興趣變現，工作不再只有一種模式
+                    </p>
+                    <p>
+                      小孩做選擇，大人可以做更好的選擇<br>
+                      安麗知道，工作、生活、興趣，缺一不可<br>
+                      三者都要，可能很硬，但也是這個世代最 IN 的選擇
+                    </p>
+                  </div>
+                  <div class="main__desc--mobile">
+                    <p>
+                      疫情催生打破工作地域與時間界線<br>
+                      WFH、Workation 新興詞彙出現<br>
+                      甚至興趣創業、興趣變現<br>
+                      工作不再只有一種模式
+                    </p>
+                    <p>
+                      小孩做選擇，大人可以做更好的選擇<br>
+                      安麗知道，工作、生活、興趣，缺一不可<br>
+                      三者都要，可能很硬<br>
+                      但也是這個世代最 IN 的選擇
+                    </p>
+                  </div>
                 </div>
                 <div class="main__illus-anims">
                   <div class="main__illus-anim">
@@ -133,33 +149,56 @@
               </div>
               <div class="cogitation__content">
                 <div class="cogitation__scope">
-                  <div class="cogitation__scope-illus-anim">
+                  <div class="cogitation__scope-illus-anim cogitation__scope-illus-anim--1st">
                     <lottie-player src="assets/animations/ae-engineer-boy.json" class="cogitation__lottie-player" background="transparent" speed="1" direction="1" mode="normal" loop autoplay></lottie-player>
                   </div>
+                  <div class="cogitation__scope-illus-anim cogitation__scope-illus-anim--2nd">
+                    <lottie-player src="assets/animations/ae-tree-and-house.json" class="cogitation__lottie-player" background="transparent" speed="1" direction="1" mode="normal" loop autoplay></lottie-player>
+                  </div>
                   <div class="cogitation__scope-content">
-                    <p>
-                      新鮮人擔心找不到工作，找到後又對工作缺乏熱情<br>
-                      做著不合自己志趣的工作<br>
-                      不斷丟履歷找工作成為常態<br>
-                      只要站對位置，發揮優勢<br>
-                      每一次的轉職都能為自己增值
-                    </p>
-                    <a href="https://web.cheers.com.tw/issue/2023/gen00/index.html" target="_blank">Read More</a>
+                    <div class="cogitation__scope-desc">
+                      <p class="cogitation__scope-desc--pc">
+                        新鮮人擔心找不到工作，找到後又對工作缺乏熱情<br>
+                        做著不合自己志趣的工作<br>
+                        不斷丟履歷找工作成為常態<br>
+                        只要站對位置，發揮優勢<br>
+                        每一次的轉職都能為自己增值
+                      </p>
+                      <p class="cogitation__scope-desc--mobile">
+                        新鮮人擔心找不到工作<br>
+                        找到後又對工作缺乏熱情<br>
+                        做著不合自己志趣的工作<br>
+                        不斷丟履歷找工作成為常態<br>
+                        只要站對位置，發揮優勢<br>
+                        每一次的轉職都能為自己增值
+                      </p>
+                    </div>
+                    <a href="https://web.cheers.com.tw/issue/2023/gen00/index.html" target="_blank" class="cogitation__scope-btn">Read More</a>
                   </div>
                 </div>
                 <div class="cogitation__scope">
-                  <div class="cogitation__scope-illus-anim">
+                  <div class="cogitation__scope-illus-anim cogitation__scope-illus-anim--1st">
                     <lottie-player src="assets/animations/ae-barista-mirror.json" class="cogitation__lottie-player" background="transparent" speed="1" direction="1" mode="normal" loop autoplay></lottie-player>
                   </div>
                   <div class="cogitation__scope-content">
-                    <p>
-                      畢業離開學校，求職加入企業<br>
-                      理所當然的線性路徑，因為疫情產生了節點與分歧<br>
-                      創業或成為斜槓青年<br>
-                      已是許多人正在選擇或行走的道路<br>
-                      熱情經濟與社群商務正在改變工作型態
-                    </p>
-                    <a href="https://www.amwayglobal.com/amway-global-entrepreneurship-report/" target="_blank">Read More</a>
+                    <div class="cogitation__scope-desc">
+                      <p class="cogitation__scope-desc--pc">
+                        畢業離開學校，求職加入企業<br>
+                        理所當然的線性路徑，因為疫情產生了節點與分歧<br>
+                        創業或成為斜槓青年<br>
+                        已是許多人正在選擇或行走的道路<br>
+                        熱情經濟與社群商務正在改變工作型態
+                      </p>
+                      <p class="cogitation__scope-desc--mobile">
+                        畢業離開學校，求職加入企業<br>
+                        理所當然的線性路徑<br>
+                        因為疫情產生了節點與分歧<br>
+                        創業或成為斜槓青年<br>
+                        已是許多人正在選擇或行走的道路<br>
+                        熱情經濟與社群商務正在改變工作型態
+                      </p>
+                    </div>
+                    <a href="https://www.amwayglobal.com/amway-global-entrepreneurship-report/" target="_blank" class="cogitation__scope-btn">Read More</a>
                   </div>
                 </div>
               </div>
@@ -202,23 +241,25 @@
                 <img src="assets/images/main-page-join-section-title.png" alt="揪 IN 安麗，你能選擇更多">
               </div>
               <div class="join__content">
-                <p class="join__desc">
-                  在安麗，我們在做的不只是工作<br>
-                  用努力收穫充足的資源以及條件<br>
-                  照顧自己與家人健康，持續獲得穩定的收入<br>
-                  透過社群拓展業務人脈，運用興趣變現創業<br>
-                  工作之於我，不是刪去選擇，而是加乘人生
-                </p>
-                <p class="join__mobile-desc">
-                  在安麗，我們在做的不只是工作<br>
-                  用努力收穫充足的資源以及條件<br>
-                  照顧自己與家人健康<br>
-                  持續獲得穩定的收入<br>
-                  透過社群拓展業務人脈<br>
-                  運用興趣變現創業<br>
-                  工作之於我<br>
-                  不是刪去選擇，而是加乘人生
-                </p>
+                <div class="join__desc">
+                  <p class="join__desc--pc">
+                    在安麗，我們在做的不只是工作<br>
+                    用努力收穫充足的資源以及條件<br>
+                    照顧自己與家人健康，持續獲得穩定的收入<br>
+                    透過社群拓展業務人脈，運用興趣變現創業<br>
+                    工作之於我，不是刪去選擇，而是加乘人生
+                  </p>
+                  <p class="join__desc--mobile">
+                    在安麗，我們在做的不只是工作<br>
+                    用努力收穫充足的資源以及條件<br>
+                    照顧自己與家人健康<br>
+                    持續獲得穩定的收入<br>
+                    透過社群拓展業務人脈<br>
+                    運用興趣變現創業<br>
+                    工作之於我，不是刪去選擇<br>
+                    而是加乘人生
+                  </p>
+                </div>
                 <div class="join__illus-anim">
                   <lottie-player src="assets/animations/ae-salesman.json" class="join__lottie-player" background="transparent" speed="1" direction="1" mode="normal" loop autoplay></lottie-player>
                   <lottie-player src="assets/animations/ae-potted-plant.json" class="join__lottie-player" background="transparent" speed="1" direction="1" mode="normal" loop autoplay></lottie-player>
@@ -236,7 +277,10 @@
                   <div class="join__media-item-title">
                     <img src="assets/images/main-page-join-section-media-1-title.png" alt="永續承諾 極致健康">
                   </div>
-                  <p class="join__media-item-desc">關懷永續，節能環保，帶來更好、更健康的生活</p>
+                  <p class="join__media-item-desc">
+                    關懷永續，節能環保<br>
+                    帶來更好、更健康的生活
+                  </p>
                 </div>
                 <div class="join__media-item" data-media-source-url="https://www.youtube.com/embed/8bhSmkMvtnQ?si=m0LZV6RIxSoPuEy3">
                   <div class="join__media-item-cover" onclick="openMediaModal(event, 'join')">
@@ -249,7 +293,10 @@
                   <div class="join__media-item-title">
                     <img src="assets/images/main-page-join-section-media-2-title.png" alt="被動收入 長遠保障">
                   </div>
-                  <p class="join__media-item-desc">全職投入或是 1 + 1 副業，自由彈性創造更多收入</p>
+                  <p class="join__media-item-desc">
+                    全職投入或是 1 + 1 副業<br>
+                    自由彈性創造更多收入
+                  </p>
                 </div>
                 <div class="join__media-item" data-media-source-url="https://www.youtube.com/embed/gO9ErtFLf5w?si=ZMilKpsA7cD6Fjpx">
                   <div class="join__media-item-cover" onclick="openMediaModal(event, 'join')">
@@ -312,12 +359,24 @@
                 </div>
                 <div class="podcast__row">
                   <div class="podcast__desc">
-                    <p>讓舞台上的聚光燈打向你，因為你夠耀眼</p>
-                    <p>丁蘭</p>
-                    <p>
-                      工作不只有一種選擇，安麗卻只有一種用人思維<br>
-                      只要擁有獨到眼光，隨時都能自帶光芒閃閃發亮
-                    </p>
+                    <div class="podcast__desc--pc">
+                      <p>讓舞台上的聚光燈打向你，因為你夠耀眼</p>
+                      <p>丁蘭</p>
+                      <p>
+                        工作不只有一種選擇，安麗卻只有一種用人思維<br>
+                        只要擁有獨到眼光，隨時都能自帶光芒閃閃發亮
+                      </p>
+                    </div>
+                    <div class="podcast__desc--mobile">
+                      <p>讓舞台上的聚光燈打向你，因為你夠耀眼</p>
+                      <p>丁蘭</p>
+                      <p>
+                        工作不只有一種選擇<br>
+                        安麗卻只有一種用人思維<br>
+                        只要擁有獨到眼光<br>
+                        隨時都能自帶光芒閃閃發亮
+                      </p>
+                    </div>
                   </div>
                   <div class="podcast__media-item" data-media-source-url="">
                     <div class="podcast__media-item-cover" onclick="openMediaModal(event, 'podcast')">
