--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 <body>
   <div class="loading-mask loading-mask--active">
     <div class="loading-mask__container">
-      <img src="assets/images/main-page-main-section-title.png" alt="Amway, my way 最 IN 的大人選擇">
+      <div class="loading-mask__wrap">
+        <img src="assets/images/main-page-main-section-title.png" alt="Amway, my way 最 IN 的大人選擇">
+      </div>
     </div>
   </div>
   <header class="header">
